# gittest

./: .dockerignore  .env  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  AGENT_ZERO_ISSUES.md  AGENT_ZERO_REVIEW.md  AGENT_ZERO_SETUP.md  LICENSE  README.md  Run pnpm run ci:verify.txt  TASK3_IMPLEMENTATION_SUMMARY.md  TASK3_NEXT_STEPS.md  agent.py  agentic.md  checkpoints.md  design.md  eslint.config.js  eslint.config.mjs  logger.py  main.mq5  main.py  main_code.py  model.py  package.json  phase9_spec.md  platforms.md  player_props_extracted.txt  pnpm-lock.yaml  progress.md  project_structure.md  pyproject.toml  report.md  requirements.md  setup.md  task1.md  task10.md  task11.md  (+24 more)
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  claude-code-review.yml
config/bot/: default.bot.json
config/cache/: cache_manifest.json
config/schema/: bot-config.schema.json  layout-pack.schema.json
data/: form.json
docs/: backup_recovery.md  config_guide.md  deployment.md  env.md  evaluation.md  observability.md  operator_manual.md  replay.md  troubleshooting.md
docs/plans/: 2026-01-29-macos-helper-design.md  2026-02-03-coinpoker-autonomy.md
env/: .env.agents  .env.evaluator  .env.executor  .env.logger  .env.orchestrator  .env.solver  .env.vision
infra/compose/: docker-compose.override.yml  docker-compose.yml
infra/docker/: workspace.Dockerfile
playwright_helpers/: __init__.py
prompts/: .gitkeep
proto/: agents.proto  buf.gen.yaml  executor.proto  logging.proto  solver.proto  strategy.proto  vision.proto
scripts/: check-task-handoff-docs.sh
services/solver/: Cargo.toml  Dockerfile  build.rs
services/solver/src/: abstraction.rs  budget.rs  cfr.rs  game_tree.rs  lib.rs  main.rs  solver.rs
services/solver/tests/: solver.rs
services/vision/: Dockerfile  README.md  create_dummy_models.py  pyproject.toml
services/vision/models/: .gitkeep
services/vision/src/: __init__.py  capture.py  client.py  confidence.py  element_recognizer.py  extraction.py  fallback.py  gating.py  models.py  occlusion.py  output.py  server.py  types.py
services/vision/src/vision/: __init__.py  capture.py  extraction.py  fallback.py  models.py  occlusion.py  output.py  server.py  templates.py  types.py  vision_pb2.py  vision_pb2_grpc.py  vision_types.py
services/vision/tests/: conftest.py  test_health_check.py  test_output.py  test_template_property.py  test_templates.py
tests/: test_title.py  test_web_tools.py
tools/: check-artifacts.ts  check-invariants.js  check-invariants.ts  check-replay-report.ts  ci-automation.md  ci-feedback-api.ts  ci-feedback.ts  fix-types.py  push-and-watch.sh  summarize.cjs  update-handoff-docs.mjs  validate-env.ts  web_tools.py
(+9 files in other folders)
