[tool.poetry]
name = "vision"
version = "0.1.0"
description = "Vision service for poker bot using ONNX inference"
authors = ["Poker Bot Team"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
onnxruntime = "1.18.1"
numpy = ">=1.21.6,<2.0"
opencv-python-headless = "^4.10.0"
pillow = "^10.4.0"
grpcio = "^1.65.0"
protobuf = "^5.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"
black = "^24.8.0"
grpcio-tools = "^1.65.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
